# VC6CV-Native-EGL

./: CMakeLists.txt  main_gl.cpp
camera/: camGL.c  camGL.h  gcs.c
gl/: defines.hpp  eglUtil.c  eglUtil.h  glhelp.h  mesh.hpp  shader.hpp  texture.cpp  texture.hpp
